apps/bowling-mania/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bowling
  labels:
    app: bowling
