apps/bowling-mania/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bowling-mania
  namespace: bowling
spec:
  selector:
    app: bowling-mania
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
