apps/bowling-mania/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: bowling-mania
    namespace: bowling
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-ovh
spec:
    ingressClassName: nginxinc
    rules:
        - host: ENC[AES256_GCM,data:07LetZi4CNVqD5tFdRPwx+tZKp2R74S0lg==,iv:VcDKzRTGgBiJF2GOLeAOpaAl28g/djRFqELf3RKkV6s=,tag:56lR3B3BntDpGSSaEmibjg==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: bowling-mania
                        port:
                            number: 80
    tls:
        - hosts:
            - ENC[AES256_GCM,data:MbmcvXW2mfZ6IHwKGTPl8HzhFEalTlsxow==,iv:CYDxsD3wrmXS8QzzaI/8atK3LPJkrZFVIkXCqrvwL24=,tag:urq2kb/k+CFAs8OuTEa3gA==,type:str]
          secretName: bowling-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2025-07-06T16:02:08Z"
    mac: ENC[AES256_GCM,data:nJ7cKaa9Y9ssLZSi5pNq7t3Wj7/3rsXFIWpsBN0xVjJwlu2+59el8Ml4ueB21vbGjJx1SVBtqYPIBS4TCXmZ6t6Q0m4gIiJ6mlYrhogIr78W3GFm4tEFpV1PZa+tk69EAqRjE0U3JOB6A4EL0rZDQ2AXMjldZTYJT4d7J9WBy4c=,iv:lI/NLLNArZokbYKjJnw/eQq4ibS+KjyORoXdri292C8=,tag:9PpXYWHdUTRVA6Lzja5ybQ==,type:str]
    pgp:
        - created_at: "2025-07-06T16:02:08Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMAwP8FxNnerN5AQ//Se94QGym87GCXcR2huSivuKdYKsq47ydN+yBZILu/ULI
[...]
            wYS146EUPhQb+DAPPsjS3W/Io19tdocaSEFefkIuehINHyZ/jSEDeNY=
            =ByUE
            -----END PGP MESSAGE-----
          fp: FEE43962AC34E28FB078EFA9F6C9CFE02626638C
    encrypted_regex: ^(data|stringData|consumerKey|email|groupName|applicationKey|host|hosts|server|dnsNames)$
    version: 3.9.0
